# Trading-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml
assets/: financial_ner_sample.json
docs/: architecture.md
infrastructure/docker/: Dockerfile.api  Dockerfile.ui  docker-compose.yml
src/trading_research/: __init__.py  config.py  costs.py  llm.py  schemas.py
src/trading_research/agents/: workflow.py
src/trading_research/analytics/: __init__.py  fundamental.py  risk.py  sentiment.py  technical.py
src/trading_research/api/: main.py  store.py
src/trading_research/evaluation/: metrics.py
src/trading_research/providers/: market_data.py  news.py  sec.py
src/trading_research/rag/: store.py
src/trading_research/training/: __init__.py  finetune_ner.py
src/trading_research/ui/: app.py
tests/: conftest.py  test_analytics.py  test_api.py  test_workflow.py
